 NEWS/ChangeLog for JRI
--------------------------

0.3-7	(under development)
    o	make sure rniJavaToXref creates a global reference

0.3-6	2006-11-29
    o	adapted to API change in R-devel

    o	fixed double-inclusion of JFLAGS which throws off GIJ

0.3-5	2006-10-06
    o	remove variadic macros to be compatible with compilers
	that don't support C99

0.3-4	2006-09-14
    o	updated Makefiles to force 1.4 target and sources

0.3-3	2006-09-12
    o	fixed API version in Java sources and added version check
	to examples

0.3-2	2006-09-11
    o	New API (1.6): add handling of boolean type

0.3-1	2006-08-31

0.3-0	2006-05-31
    o	New API (1.5) entries: rniGetTAG, rniInherits,
	rniGetSymbolName, rniInstallName
	allows handling of symbols, named lists and inheritance

    o	fixed/improved REXP, RList and RFactor

0.2-5	2006-05-08
    o	Use configure to detect CStackXXX and R_SignalHandlers
	set the latter to 0 if present (solves threading issues)

0.2-4	2006-05-03
    o	added support for pre-configuration passed from rJava

0.2-3	2006-04-20
    o	fix warnings and issues with R 2.3.0

0.2-2	2006-04-11
    o	licensed under LGPL

0.2-1	2006-03-07
    o	fixed Java detection, fixed eval double-unlock,
	use R shlib flags, added FreeBSD support

0.2-0	2005-12-19
    o	switched to autoconf process for configuration/installation 

0.1-0
    o	First JRI release
